# lqr_v1

./: CMakeLists.txt  README.md  main  plot_state.gp  recomp.sh  run.sh
include/: lqr.h
output/: computedAcl.csv  computedK.csv  computedSimulatedStateTrajectory.csv  computedSolutionRiccati.csv
src/: lqr.cpp  main.cpp
